[gd_scene load_steps=2 format=3 uid="uid://n0348f3sqmbb"]

[ext_resource type="Script" path="res://UI Elements/game_menu.gd" id="1_phumg"]

[node name="GameMenu" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_phumg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -65.0
offset_right = 143.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="Dread" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -20.0
offset_right = 146.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
text = "Have Exisntential Dread"

[node name="Controls" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = 25.0
offset_right = 144.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
text = "Controls"

[node name="Exit" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.0
offset_top = 69.0
offset_right = 142.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Logo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.0
offset_top = 392.0
offset_right = 63.0
offset_bottom = 415.0
grow_horizontal = 2
text = "(Game Logo Here)"

[node name="DreadPhrase" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = -292.0
offset_right = -19.0
offset_bottom = -243.0
grow_horizontal = 2
grow_vertical = 0
text = "But meanwhile, time flies; it flies never to be regained. - Virgil "
autowrap_mode = 2

[node name="ControlsMenu" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="ControlsMenu"]
layout_mode = 2

[node name="Controls" type="Label" parent="ControlsMenu/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.5
offset_top = -137.5
offset_right = 187.5
offset_bottom = 137.5
grow_horizontal = 2
grow_vertical = 2
text = "    Xbox Controller/Keyboard

Move Left: 
Left Trigger/Left Arrow

Move Right: 
Right Trigger/Right Arrow

Jump: 
A/Space Key"
autowrap_mode = 2

[node name="Label" type="Label" parent="ControlsMenu/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.0
offset_top = 9.0
offset_right = 67.0
offset_bottom = 35.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "CONTROLS"

[node name="Label2" type="Label" parent="ControlsMenu/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.0
offset_top = 355.0
offset_right = 67.0
offset_bottom = 381.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "B/Esc to Exit"

[connection signal="pressed" from="Panel/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Panel/Dread" to="." method="_on_dread_pressed"]
[connection signal="pressed" from="Panel/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Panel/Exit" to="." method="_on_exit_pressed"]
